Fixing menu and logo

--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ keywords: "huisarts mechelen, huisartspraktijk mechelen,
     	portarts mechelen zuid, lijfarts, lijfarts mechelen, lijfarts mechelen zuid, 
     	groepspraktijk, groepspraktijk mechelen zuid, groepspraktijk mechelen,
     	stuivenbergvaart, stuivenbergvaart 52, Sofie Decamps, Sofie Van Tongelen"
-main_title: "Huisartsenpraktijk De Vaart"
+main_title: "archiwise.com"
